src/de/tum/mocca/parser/CtplParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CtplParser.java */
package de.tum.mocca.parser;
import de.tum.mocca.ctpl.*;

public class CtplParser/*@bgen(jjtree)*/implements CtplParserTreeConstants, CtplParserConstants {/*@bgen(jjtree)*/
  protected JJTCtplParserState jjtree = new JJTCtplParserState();
    public static void main(String args[]) throws ParseException {
                CtplParser parser = new CtplParser(System.in);
                while (true) {
                    System.out.print("Enter Expression: ");
                    System.out.flush();
                    try {
                                SimpleNode n = parser.oneline();
                                // Skip first node
                                n = (SimpleNode)n.jjtGetChild(0);
                                System.out.println(convertToCtplTree(n));
                    } catch (Exception e) {
                        System.out.println("Parse Error: " + e.getMessage());
                                System.out.println("Exiting.");
                                System.exit(1);
                    }
                }
    }

    public CtplParser(String s) {
        this(new java.io.StringReader(s));
    }

    public CtplTreeNode parseIntoTree() throws ParseException {
                SimpleNode n = oneline();
                // Skip first node
                n = (SimpleNode)n.jjtGetChild(0);
                return convertToCtplTree(n);
    }

        /**
	 * Helper function that converts the simple tree structure
	 * to a CtlTree. Does simple predicate parsing.
	 */
        private static CtplTreeNode convertToCtplTree(SimpleNode simple) throws ParseException {
                CtplTreeNode root;
                if (simple.id == CtplParserTreeConstants.JJTPREDICATE) {
                        String body = simple.textValue;
                        String[] params;
                        if (simple.children != null) {
                                params = new String[simple.children.length];
                                for (int i=0; i<simple.children.length; i++)
                                        if (((SimpleNode)simple.children[i]).id == CtplParserTreeConstants.JJTPARAMETER)
                                                params[i] = ((SimpleNode)simple.children[i]).textValue;
                                        else throw new ParseException(((SimpleNode)simple.children[i]).textValue + " is not a valid parameter!");
                        } else params = new String[0];
                        root = new CtplTreeNode(
                                        new CtplPredicate(body, params)
                                        );
                } else if (/*(simple.id == CtlParserTreeConstants.JJTALL) ||*/
                        (simple.id == CtplParserTreeConstants.JJTEXISTS)) {

                        if ((simple.children == null) || (simple.children.length != 2)) throw new ParseException("Wrong number of arguments for quantifier " + simple.textValue);
                        root = new CtplTreeNode(new CtplQuantifier(simple.id, ((SimpleNode)simple.children[0]).textValue));
                        root.addChild(convertToCtplTree((SimpleNode)simple.children[1]));
                }
                else {
                        root = new CtplTreeNode(new CtplOperator(simple.id));
                        if (simple.children != null)
                                for (int i=0; i<simple.children.length; i++)
                                        root.addChild(convertToCtplTree((SimpleNode)simple.children[i]));
                }
                return root;
        }

  final public SimpleNode oneline() throws ParseException {
                        /*@bgen(jjtree) oneline */
  SimpleNode jjtn000 = new SimpleNode(JJTONELINE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      term();
      if (jj_2_1(2)) {
        jj_consume_token(EOL);
      } else if (jj_2_2(2)) {
        jj_consume_token(0);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void term() throws ParseException {
    disjunction();
  }

  final public void disjunction() throws ParseException {
          SimpleNode jjtn001 = new SimpleNode(JJTOR);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
    try {
      conjunction();
      if (jj_2_3(2)) {
        jj_consume_token(OR);
        disjunction();
      } else {
        ;
      }
    } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
    } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
          }
    }
  }

  final public void conjunction() throws ParseException {
          SimpleNode jjtn001 = new SimpleNode(JJTAND);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
    try {
      until();
      if (jj_2_4(2)) {
        jj_consume_token(AND);
        conjunction();
      } else {
        ;
      }
    } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
    } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
          }
    }
  }

  final public void until() throws ParseException {
    if (jj_2_5(2)) {
      temporal();
    } else if (jj_2_6(2)) {
                  SimpleNode jjtn001 = new SimpleNode(JJTAU);
                  boolean jjtc001 = true;
                  jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(ALL);
        temporal();
        jj_consume_token(UNTIL);
        until();
      } catch (Throwable jjte001) {
                  if (jjtc001) {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte001 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte001;}
                  }
                  if (jjte001 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte001;}
                  }
                  {if (true) throw (Error)jjte001;}
      } finally {
                  if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001, true);
                  }
      }
    } else if (jj_2_7(2)) {
                  SimpleNode jjtn002 = new SimpleNode(JJTEU);
                  boolean jjtc002 = true;
                  jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(EXISTS);
        temporal();
        jj_consume_token(UNTIL);
        until();
      } catch (Throwable jjte002) {
                  if (jjtc002) {
                    jjtree.clearNodeScope(jjtn002);
                    jjtc002 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte002 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte002;}
                  }
                  if (jjte002 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte002;}
                  }
                  {if (true) throw (Error)jjte002;}
      } finally {
                  if (jjtc002) {
                    jjtree.closeNodeScope(jjtn002, true);
                  }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void temporal() throws ParseException {
    if (jj_2_8(2)) {
      not();
    } else if (jj_2_9(2)) {
                  SimpleNode jjtn001 = new SimpleNode(JJTAX);
                  boolean jjtc001 = true;
                  jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(ALL);
        jj_consume_token(NEXT);
        not();
      } catch (Throwable jjte001) {
                  if (jjtc001) {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte001 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte001;}
                  }
                  if (jjte001 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte001;}
                  }
                  {if (true) throw (Error)jjte001;}
      } finally {
                  if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001, true);
                  }
      }
    } else if (jj_2_10(2)) {
                  SimpleNode jjtn002 = new SimpleNode(JJTAF);
                  boolean jjtc002 = true;
                  jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(ALL);
        jj_consume_token(FINALLY);
        not();
      } catch (Throwable jjte002) {
                  if (jjtc002) {
                    jjtree.clearNodeScope(jjtn002);
                    jjtc002 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte002 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte002;}
                  }
                  if (jjte002 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte002;}
                  }
                  {if (true) throw (Error)jjte002;}
      } finally {
                  if (jjtc002) {
                    jjtree.closeNodeScope(jjtn002, true);
                  }
      }
    } else if (jj_2_11(2)) {
                  SimpleNode jjtn003 = new SimpleNode(JJTAG);
                  boolean jjtc003 = true;
                  jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(ALL);
        jj_consume_token(GLOBALLY);
        not();
      } catch (Throwable jjte003) {
                  if (jjtc003) {
                    jjtree.clearNodeScope(jjtn003);
                    jjtc003 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte003 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte003;}
                  }
                  if (jjte003 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte003;}
                  }
                  {if (true) throw (Error)jjte003;}
      } finally {
                  if (jjtc003) {
                    jjtree.closeNodeScope(jjtn003, true);
                  }
      }
    } else if (jj_2_12(2)) {
                  SimpleNode jjtn004 = new SimpleNode(JJTEX);
                  boolean jjtc004 = true;
                  jjtree.openNodeScope(jjtn004);
      try {
        jj_consume_token(EXISTS);
        jj_consume_token(NEXT);
        not();
      } catch (Throwable jjte004) {
                  if (jjtc004) {
                    jjtree.clearNodeScope(jjtn004);
                    jjtc004 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte004 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte004;}
                  }
                  if (jjte004 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte004;}
                  }
                  {if (true) throw (Error)jjte004;}
      } finally {
                  if (jjtc004) {
                    jjtree.closeNodeScope(jjtn004, true);
                  }
      }
    } else if (jj_2_13(2)) {
                  SimpleNode jjtn005 = new SimpleNode(JJTEF);
                  boolean jjtc005 = true;
                  jjtree.openNodeScope(jjtn005);
      try {
        jj_consume_token(EXISTS);
        jj_consume_token(FINALLY);
        not();
      } catch (Throwable jjte005) {
                  if (jjtc005) {
                    jjtree.clearNodeScope(jjtn005);
                    jjtc005 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte005 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte005;}
                  }
                  if (jjte005 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte005;}
                  }
                  {if (true) throw (Error)jjte005;}
      } finally {
                  if (jjtc005) {
                    jjtree.closeNodeScope(jjtn005, true);
                  }
      }
    } else if (jj_2_14(2)) {
                  SimpleNode jjtn006 = new SimpleNode(JJTEG);
                  boolean jjtc006 = true;
                  jjtree.openNodeScope(jjtn006);
      try {
        jj_consume_token(EXISTS);
        jj_consume_token(GLOBALLY);
        not();
      } catch (Throwable jjte006) {
                  if (jjtc006) {
                    jjtree.clearNodeScope(jjtn006);
                    jjtc006 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte006 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte006;}
                  }
                  if (jjte006 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte006;}
                  }
                  {if (true) throw (Error)jjte006;}
      } finally {
                  if (jjtc006) {
                    jjtree.closeNodeScope(jjtn006, true);
                  }
      }
    } else if (jj_2_15(2)) {
                  SimpleNode jjtn007 = new SimpleNode(JJTEXISTS);
                  boolean jjtc007 = true;
                  jjtree.openNodeScope(jjtn007);
      try {
        jj_consume_token(QEXISTS);
        variable();
        term();
      } catch (Throwable jjte007) {
                  if (jjtc007) {
                    jjtree.clearNodeScope(jjtn007);
                    jjtc007 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte007 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte007;}
                  }
                  if (jjte007 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte007;}
                  }
                  {if (true) throw (Error)jjte007;}
      } finally {
                  if (jjtc007) {
                    jjtree.closeNodeScope(jjtn007, true);
                  }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void not() throws ParseException {
    if (jj_2_16(2)) {
      atom();
    } else if (jj_2_17(2)) {
                  SimpleNode jjtn001 = new SimpleNode(JJTNOT);
                  boolean jjtc001 = true;
                  jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(NOT);
        not();
      } catch (Throwable jjte001) {
                  if (jjtc001) {
                    jjtree.clearNodeScope(jjtn001);
                    jjtc001 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte001 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte001;}
                  }
                  if (jjte001 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte001;}
                  }
                  {if (true) throw (Error)jjte001;}
      } finally {
                  if (jjtc001) {
                    jjtree.closeNodeScope(jjtn001, true);
                  }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void atom() throws ParseException {
    if (jj_2_18(2)) {
      predicate();
    } else if (jj_2_19(2)) {
      jj_consume_token(LPARENT);
      term();
      jj_consume_token(RPARENT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void predicate() throws ParseException {
                    /*@bgen(jjtree) predicate */
                     SimpleNode jjtn000 = new SimpleNode(JJTPREDICATE);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(PREDICATE);
      jj_consume_token(LPARENT);
      if (jj_2_21(2)) {
        parameter();
        label_1:
        while (true) {
          if (jj_2_20(2)) {
            ;
          } else {
            break label_1;
          }
          jj_consume_token(COMMA);
          parameter();
        }
      } else {
        ;
      }
      jj_consume_token(RPARENT);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
                jjtn000.textValue = t.image;
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void parameter() throws ParseException {
                    /*@bgen(jjtree) parameter */
                     SimpleNode jjtn000 = new SimpleNode(JJTPARAMETER);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_22(2)) {
        t = jj_consume_token(IDENTIFIER);
      } else if (jj_2_23(2)) {
        t = jj_consume_token(VARIABLE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
                jjtn000.textValue = t.image;
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void variable() throws ParseException {
                   /*@bgen(jjtree) variable */
                    SimpleNode jjtn000 = new SimpleNode(JJTVARIABLE);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(VARIABLE);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
                jjtn000.textValue = t.image;
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  final private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  final private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  final private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  final private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  final private boolean jj_3R_6() {
    if (jj_scan_token(VARIABLE)) return true;
    return false;
  }

  final private boolean jj_3_7() {
    if (jj_scan_token(EXISTS)) return true;
    if (jj_3R_4()) return true;
    return false;
  }

  final private boolean jj_3R_4() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  final private boolean jj_3_6() {
    if (jj_scan_token(ALL)) return true;
    if (jj_3R_4()) return true;
    return false;
  }

  final private boolean jj_3_22() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  final private boolean jj_3R_10() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) return true;
    }
    return false;
  }

  final private boolean jj_3_5() {
    if (jj_3R_4()) return true;
    return false;
  }

  final private boolean jj_3_4() {
    if (jj_scan_token(AND)) return true;
    if (jj_3R_3()) return true;
    return false;
  }

  final private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) return true;
    }
    }
    return false;
  }

  final private boolean jj_3_3() {
    if (jj_scan_token(OR)) return true;
    if (jj_3R_2()) return true;
    return false;
  }

  final private boolean jj_3R_8() {
    if (jj_scan_token(PREDICATE)) return true;
    if (jj_scan_token(LPARENT)) return true;
    return false;
  }

  final private boolean jj_3_17() {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_5()) return true;
    return false;
  }

  final private boolean jj_3R_3() {
    if (jj_3R_11()) return true;
    return false;
  }

  final private boolean jj_3_20() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  final private boolean jj_3_19() {
    if (jj_scan_token(LPARENT)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  final private boolean jj_3_18() {
    if (jj_3R_8()) return true;
    return false;
  }

  final private boolean jj_3_16() {
    if (jj_3R_7()) return true;
    return false;
  }

  final private boolean jj_3R_7() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_18()) {
    jj_scanpos = xsp;
    if (jj_3_19()) return true;
    }
    return false;
  }

  final private boolean jj_3R_2() {
    if (jj_3R_3()) return true;
    return false;
  }

  final private boolean jj_3_2() {
    if (jj_scan_token(0)) return true;
    return false;
  }

  final private boolean jj_3R_5() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_16()) {
    jj_scanpos = xsp;
    if (jj_3_17()) return true;
    }
    return false;
  }

  final private boolean jj_3_15() {
    if (jj_scan_token(QEXISTS)) return true;
    if (jj_3R_6()) return true;
    return false;
  }

  final private boolean jj_3_14() {
    if (jj_scan_token(EXISTS)) return true;
    if (jj_scan_token(GLOBALLY)) return true;
    return false;
  }

  final private boolean jj_3R_9() {
    if (jj_3R_2()) return true;
    return false;
  }

  final private boolean jj_3_13() {
    if (jj_scan_token(EXISTS)) return true;
    if (jj_scan_token(FINALLY)) return true;
    return false;
  }

  final private boolean jj_3_12() {
    if (jj_scan_token(EXISTS)) return true;
    if (jj_scan_token(NEXT)) return true;
    return false;
  }

  final private boolean jj_3_23() {
    if (jj_scan_token(VARIABLE)) return true;
    return false;
  }
